--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 1rem 9%;
+  padding: 1rem 14%;
   background-color: transparent;
   filter: drop-shadow(10px);
   display: flex;
@@ -38,15 +38,17 @@ header {
 }
 
 .logo {
+  position: relative;
   font-size: 3rem;
-  color: rgb(0, 218, 189);
+  color: rgb(166, 255, 0);
   font-weight: 800;
   cursor: pointer;
   transition: 0.5s ease;
 }
 
+
 .logo:hove {
-  transform: scale(1.1);
+transform: scale(1.1);
 }
 
 nav a {
@@ -60,8 +62,8 @@ nav a {
 
 nav a:hover,
 nav a.active {
-  color: rgb(0, 218, 189);
-  border-bottom: 3px solid rgb(0, 218, 189);
+  color: rgb(166, 255, 0);
+  border-bottom: 3px solid rgb(166, 255, 0);
 }
 
 @media (max-width: 995px) {
@@ -71,8 +73,8 @@ nav a.active {
     top: 0;
     right: 0;
     width: 40%;
-    border-left: 3px solid rgb(0, 218, 189);
-    border-bottom: 3px solid rgb(0, 218, 189);
+    border-left: 3px solid rgb(166, 255, 0);
+    border-bottom: 3px solid rgb(166, 255, 0);
     border-bottom-left-radius: 2rem;
     padding: 1rem solid;
     background-color: #161616;
@@ -93,7 +95,7 @@ nav a.active {
   nav a.active {
     padding: 1rem;
     border-radius: 0.5rem;
-    border-bottom: 0.5rem solid rgb(0, 218, 189);
+    border-bottom: 0.5rem solid rgb(166, 255, 0);
   }
 }
 
@@ -108,6 +110,7 @@ section {
   align-items: center;
   gap: 8rem;
   background-color: black;
+  padding-top: 100px;
 }
 
 .home .home-content h1 {
@@ -117,7 +120,7 @@ section {
 }
 
 span {
-  color: rgb(0, 218, 189);
+  color: rgb(166, 255, 0);
 }
 
 .home-content h3 {
@@ -136,9 +139,9 @@ span {
 
 .home-img img {
   position: relative;
-  width: 25vw;
-  border-radius: 50%;
-  box-shadow: 0 0 25px solid rgb(0, 218, 189);
+  width: 20vw;
+  border-radius: 45%;
+  box-shadow: 0 0 25px solid rgb(166, 255, 0);
   cursor: pointer;
   transition: 0.2s linear;
 }
@@ -155,19 +158,19 @@ span {
   width: 4rem;
   height: 4rem;
   background-color: transparent;
-  border: 0.2rem solid rgb(0, 218, 189);
+  border: 0.2rem solid rgb(166, 255, 0);
   font-size: 2rem;
   border-radius: 50%;
   margin: 3rem 1.5rem 3rem 0;
   transition: 0.3s ease;
-  color: rgb(0, 218, 189);
+  color: rgb(166, 255, 0);
 }
 
 .social-icons a:hover {
   color: black;
   transform: scale(1.3) translateY(-5px);
-  background-color: rgb(0, 218, 189);
-  box-shadow: 0 0 25px rgb(0, 218, 189);
+  background-color: rgb(166, 255, 0);
+  box-shadow: 0 0 25px rgb(255, 0, 0);
 }
 
 .btn {
@@ -176,19 +179,19 @@ span {
   background-color: black;
   border-radius: 4rem;
   font-size: 1.6rem;
-  color: rgb(0, 218, 189);
+  color: rgb(166, 255, 0);
   letter-spacing: 0.3rem;
   font-weight: 600;
-  border: 2px solid rgb(0, 218, 189);
+  border: 2px solid rgb(166, 255, 0);
   transition: 0.3s ease;
   cursor: pointer;
 }
 
 .btn:hover {
   transform: scale3d(1.03);
-  background-color: rgb(0, 218, 189);
+  background-color: rgb(166, 255, 0);
   color: black;
-  box-shadow: 0 0 25px rgb(0, 218, 189);
+  box-shadow: 0 0 25px rgb(255, 1, 1);
 }
 
 .typing-text span {
@@ -197,7 +200,7 @@ span {
 
 .typing-text span::before {
   content: "Software Developer";
-  color: rgb(0, 218, 189);
+  color: rgb(166, 255, 0);
   animation: words 20s infinite;
 }
 
@@ -214,7 +217,7 @@ span {
 
 @keyframes cursor {
   to {
-    border-left: 3px solid rgb(0, 218, 189);
+    border-left: 3px solid rgb(166, 255, 0);
   }
 }
 
